fixed spacing and alignment issues

--- a/src/app/tracks-play-book-util/add-tracks-play-book/add-tracks-play-book.component.css
+++ b/src/app/tracks-play-book-util/add-tracks-play-book/add-tracks-play-book.component.css
@@ -1155,3 +1155,9 @@ input.cmn-toggle-round-flat:checked+label:after {
     align-items: center;
     justify-content: space-around;
   }
+  .pt15{
+    padding-top: 20px !important;
+  }
+  .pt5{
+    padding-top: 5px !important;
+  }
